--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 		<meta property="og:title" content="You are an idiot! (dot cc)">
 		<meta property="og:description" content="This is a new malicious iteration of the legendary website.">
 		<meta property="og:url" content="/">
-		<meta property="og:image" content="/images/idiot.png">
-		<meta property="og:image:secure_url" content="/images/idiot.png">
+		<meta property="og:image" content="images/idiot.png">
+		<meta property="og:image:secure_url" content="images/idiot.png">
 		<meta property="og:image:width" content="256">
 		<meta property="og:image:height" content="256">
 		<meta property="og:image:alt" content="Idiot!">
 
-		<link rel="stylesheet" href="/styles/styles.css">
-		<script src="/scripts/you.js"></script>
+		<link rel="stylesheet" href="styles/styles.css">
+		<script src="scripts/you.js"></script>
 	</head>
 
 	<body>
 		<div class="idiot-container">
 			<div class="info-container">
-				<img class="speaker" id="youare-micon" src="/images/speakerm.png">
+				<img class="speaker" id="youare-micon" src="images/speakerm.png">
 				
 				<div class="links">
 					<a class="link" href="https://youtu.be/ZcwxToKjJhE">about</a>
@@ -32,11 +32,11 @@
 				</div>
 			</div>
 			
-			<video src="/media/youare.mp4" type="video/mp4" id="youare-video" muted autoplay loop/>
+			<video src="media/youare.mp4" type="video/mp4" id="youare-video" muted autoplay loop/>
 		</div>	
 	
 		<audio id="youare-audio" loop hidden>
-			<source src="/media/youare.mp3" type="audio/mp3">
+			<source src="media/youare.mp3" type="audio/mp3">
 		</audio>
 	</body>
 </html>
