--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 	<head>
-		<title>You are an Idiot! (dot vercel dot app)</title>
+		<title>You are an Idiot! (dot com)</title>
 
 		<meta name="Author" content="The ADR and Jazzy (After 2020 - Endermanch)">
 		<meta name="Keywords" content="you are an idiot, you, are, an, idiot, fool, youdontknowwhoiam.org, youdontknowwhoiam, you dont know who i am, you, dont, know, who, i, am, org, dot, aregner, jazzy, adr">
